# allgebra-template-example

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  docker-compose.yml
.github/workflows/: cmake.yml
src/: CMakeLists.txt  test.cpp
